--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -1,20 +1,38 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CategoryController!{% endblock %}
+{% block title %}
+    Hello CategoryController!
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <style>
+        .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
+        .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+    </style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/wamp64/www/e-commerce_symfony/src/Controller/CategoryController.php</code></li>
-        <li>Your template at <code>C:/wamp64/www/e-commerce_symfony/templates/category/index.html.twig</code></li>
-    </ul>
-</div>
+    <section class="categories_container">
+        <div class="categories">
+        {% for msg in app.flashes('success') %} {#TODO: A supp#}
+                <div class="alert alert-success my-2"> {{msg}} </div>
+            {% endfor %} 
+            <table class="table">
+                <tr>
+                    <th>Nom de la catégorie</th>
+                    <th>Action</th>
+                </tr>
+                {% for category in categories %}
+                    <tr>
+                        <td> {{category.name}} </td>
+                        <td>
+                            <a href="{{ path('app_category_update', {'id':category.id}) }}" class="btn btn-primary">Modifier</a>
+                            <a  href="{{ path('app_category_remove', {'id':category.id}) }}" class="btn btn-danger">Supprimer</a>
+                        </td>
+                    </tr>
+                {% else %}
+                    <p>Aucune catégorie à afficher</p>
+                {% endfor %}
+            </table>
+            <a href="{{ path('app_category_create') }}" class="btn btn-success">Créer une catégorie</a>
+        </div>
+    </section>
 {% endblock %}
