--- a/templates/category/updateCategory.html.twig
+++ b/templates/category/updateCategory.html.twig
@@ -1,16 +1,19 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Création de catégorie
+    Modification de catégorie
 {% endblock %}
 
 {% block body %}
     <div class="container">
         <div class="form">
-            <h2>Ajouter une catégorie</h2>
+            <h2>Modifier une catégorie</h2>
+             {% for msg in app.flashes('success') %} {#TODO: A supp#}
+                <div class="alert alert-success my-2"> {{msg}} </div>
+            {% endfor %} 
             {{ form_start(form) }}
             {{ form_row(form.name, {'attr':{'class':'form form-control'}}) }}
-            <input type="submit" value="Sauvegarder" class="btn btn-primary mt-4">
+            <input type="submit" value="Modifier" class="btn btn-primary mt-4">
             {{ form_end(form) }}
         </div>
     </div>
