--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,7 +16,7 @@
         {% endblock %}
     </head>
     <body>
-        {% block header %}
+        {% block nav %}
             {% include '/layouts/_navbar.html.twig' %}
         {% endblock %}
 
