--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,20 +1,52 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello UserController!{% endblock %}
+{% block title %}
+    Liste des utilisateurs
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <div class="container mt-2">
+        <table class="table">
+            <thead class="thead-dark">
+                <tr>
+                    <th>ID</th>
+                    <th>Nom</th>
+                    <th>Prénom</th>
+                    <th>Email</th>
+                    <th>Rôle</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+            <tbody>
+                {% for user in users %}
+                    <tr>
+                        <td> {{user.id}} </td>
+                        <td> {{user.lastname}} </td>
+                        <td> {{user.firstname}} </td>
+                        <td> {{user.email}} </td>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/wamp64/www/e-commerce_symfony/src/Controller/UserController.php</code></li>
-        <li>Your template at <code>C:/wamp64/www/e-commerce_symfony/templates/user/index.html.twig</code></li>
-    </ul>
-</div>
+                        {% if ('ROLE_ADMIN' in user.roles) %}
+                            <td class="text-primary">Administrateur</td>
+                        {% elseif ('ROLE_EDITOR' in user.roles) %}
+                            <td>Editeur</td>
+                        {% else %}
+                            <td>Client</td>
+                        {% endif %}
+
+                        <td>
+                            {% if ('ROLE_ADMIN' in user.roles) == false %}
+                                {% if ('ROLE_EDITOR' in user.roles) == false %}
+                                    <a onclick= "return confirm('Voulez vous vraiment ajouter le rôle Editeur à cet utilisateur ?')" class="btn btn-outline-primary" href="{{ path('app_user_add_editor_role', {'id': user.id, 'role': 'ROLE_EDITOR'}) }}">Ajouter le rôle Editeur</a>
+                                {% else %}
+                                    <a onclick= "return confirm('Voulez vous vraiment retirer le rôle Editeur à cet utilisateur ?')" class="btn btn-outline-danger" href=" {{ path('app_user_remove_editor_role', {'id': user.id}) }} " >Retirer le rôle Editeur</a>
+                                {% endif %}
+                                <a href=" {{ path('app_user_remove', {'id': user.id})}} " onclick= "return confirm('Voulez vous vraiment supprimer cet utilisateur ?')" class="btn btn-danger">Supprimer</a>
+                            {% endif %}
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
